--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.application.name=DOH
-
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.0.45:3306/team_db?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
-spring.datasource.username=abc5
-spring.datasource.password=123456789
-
-# MyBatis ?? ?? ?? ??
-mybatis.mapper-locations=classpath:/mapper/**/*Mapper.xml
+#spring.application.name=DOH
+#
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://192.168.0.45:3306/team_db?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+#spring.datasource.username=abc5
+#spring.datasource.password=123456789
+#
+## MyBatis ?? ?? ?? ??
+#mybatis.mapper-locations=classpath:/mapper/**/*Mapper.xml
