:sparkles: 웹 소켓 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,9 @@ dependencies {
 
 	// JUnit 플랫폼
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	//WebSocket
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 }
 
 tasks.named('test') {
