--- a/build.gradle
+++ b/build.gradle
@@ -24,34 +24,19 @@ repositories {
 }
 
 dependencies {
-	// Thymeleaf 관련 의존성 추가
+	//implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'  // 추가된 부분
-
-	// Spring Web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-
-	// MyBatis 설정
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
-
-	// Thymeleaf + Spring Security (선택사항, 사용시 활성화)
-//	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
-
-	// Lombok 설정
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 	compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
-
-	// MySQL JDBC 드라이버
 	runtimeOnly 'com.mysql:mysql-connector-j'
-
-	// 테스트 관련 의존성
+	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
-
-	// JUnit 플랫폼
+	//testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
-	//WebSocket
+	//spring websocket
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 }
 
