Reapply "Merge branch '15-채팅방-기능-구현' of https://github.com/DohoonHan/D-OH into 15-채팅방-기능-구현"
This reverts commit 67ec43eab7f62f2937543bbadccae3693717bef8.

--- a/build.gradle
+++ b/build.gradle
@@ -24,19 +24,34 @@ repositories {
 }
 
 dependencies {
-	//implementation 'org.springframework.boot:spring-boot-starter-security'
+	// Thymeleaf 관련 의존성 추가
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'  // 추가된 부분
+
+	// Spring Web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// MyBatis 설정
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
-	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+
+	// Thymeleaf + Spring Security (선택사항, 사용시 활성화)
+//	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+
+	// Lombok 설정
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	// MySQL JDBC 드라이버
+	runtimeOnly 'com.mysql:mysql-connector-j'
+
+	// 테스트 관련 의존성
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
-	//testImplementation 'org.springframework.security:spring-security-test'
+
+	// JUnit 플랫폼
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	//spring websocket
+
+	//WebSocket
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 }
 
