--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 # 기본 프로파일 공통 설정
 spring:
   application:
-    name: DohApplication.java  # 애플리케이션 이름
+    name: DohApplication  # 애플리케이션 이름
   datasource:
     url: jdbc:mysql://teamdb.cx6acq2ikt1l.ap-northeast-2.rds.amazonaws.com:3306/DOH
     username: abc3
@@ -21,6 +21,7 @@ thymeleaf:
   prefix: classpath:templates/
   suffix: .html
   check-template-location: true
+  mode: HTML
 
 mybatis:
   mapper-locations: classpath:/mapper/**/*Mapper.xml
