s3의존성, 엑세스키 추가
* 액세스키 업로드 안되게 코드추가
* s3 의존성 추가

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### Ignore sensitive application files ###
+/src/main/resources/application.yml
+/java/com/DOH/DOH/configuration/S3Config.java
