--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,4 @@
-cloud:
-  aws:
-    credentials:
-      access-key: {KIARSU7KSFREXNL6YJM}
-      secret-key: {Pk793mtBCDSwogPJC31Pjceuv/hKOB3jdRRlyUHx}
-    s3:
-      bucket: doh-contest-storage
-    region:
-      static: ap-northeast-2 # 리전 정보
-    stack:
-      auto: false # 기본 프로파일 공통 설정
-
+# 기본 프로파일 공통 설정
 spring:
   application:
     name: DohApplication  # 애플리케이션 이름
@@ -25,25 +14,19 @@ spring:
   main:
     allow-bean-definition-overriding: true
 
-  # 파일 업로드 설정 추가
-  servlet:
-    multipart:
-      max-file-size: 10MB    # 최대 파일 크기 10MB
-      max-request-size: 10MB # 최대 요청 크기 10MB
-
-# Thymeleaf 설정
+    #추가
 thymeleaf:
   enabled: true
-  cache: false # 개발시 새로고침하면 적용됨
+  cache: false #개발시 새로고침하면 적용.
   prefix: classpath:templates/
   suffix: .html
   check-template-location: true
   mode: HTML
 
-# MyBatis 설정
 mybatis:
   mapper-locations: classpath:/mapper/**/*Mapper.xml
 
-# 서버 포트 설정
 server:
   port: 8083
+
+
