Update .gitignore to exclude specific files and remove them from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,9 @@ out/
 
 ### VS Code ###
 .vscode/
+
+
+### Ignore sensitive application files ###
+/src/main/resources/application.yml
+/src/main/java/com/DOH/DOH/configuration/S3Config.java
+
