이메일 인증 기능 구현 및 Thymeleaf 템플릿 적용
- 이메일 인증 기능 구현: 사용자가 입력한 이메일로 인증 코드를 전송하고, 해당 코드를 통해 인증을 처리하는 기능을 추가.
- Thymeleaf 템플릿 적용: 이메일 전송 시 HTML 형식의 템플릿(user/email-template.html)을 사용하여 인증 코드 메시지 구성.
- JavaMailSender 설정: Spring Boot 설정을 통해 이메일 전송을 위한 JavaMailSender 설정 및 인증 처리.
- 인증 코드 생성 및 검증: 인증 코드는 UUID를 사용하여 생성하며, 이를 사용자 이메일과 매칭해 Map에 저장하고, 입력된 인증 코드와 비교하여 검증하는 기능 추가.
- 추가 의존성: 이메일 전송을 위한 spring-boot-starter-mail 및 Thymeleaf 템플릿 엔진 관련 의존성 추가.

--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,11 @@ dependencies {
 	// JUnit 플랫폼
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+	// email authentication
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	// validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 	//spring scurity
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 }
